# snakemake-report-plugin-benchmark

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/snakemake_report_plugin_benchmark/: __init__.py
tests/: test_plugin.py
