[project]
name = "snakemake-report-plugin-benchmark"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [ "snakemake-interface-common (>=1.17.4,<2.0.0)", "snakemake-interface-report-plugins (>=1.1.0,<2.0.0)",]
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/report/benchmark.html"
[[project.authors]]
name = "Izaskun Mallona"
email = "izaskun.mallona@gmail.com"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
coverage = "^7.6.12"
pytest = "^8.3.5"
snakemake = "^8.30.0"
